# manage_storage

./: README.md  docker-compose.yml
storage/: .flaskenv  Dockerfile  README.md  app.py  pyproject.toml
storage/migrations/versions/: 30a0e4a6bc5e_aktualizacja_projektu_o_rozbicie_.py  33cac6d7fd6d_aktualizacja_w_tabelach.py  533d9499791e_druga_tabela_suppliers.py  6f832efe5f87_tabela_stockwithexpdates_stocks_sumamry_.py  746161cd455b_pierwsza_tablea_products.py  8d8bbe3dfba7_dodanie_numeru_telefonu_do_supplier.py  93fe1bc0a2cd_nowe_tabele_arch_przenoszenie_arch_.py  b2a2bab5488b_piata_tabela_inbound_orders.py  d7823c45469d_trzecia_tabela_warehouses_i_czwarte_.py  fbcb9e8ef876_dodanie_tabel_arch.py
storage/webapp/: __init__.py  containers.py  settings.py
storage/webapp/api/: __init__.py
storage/webapp/api/deliveries/: __init__.py  mappers.py  routers.py  schemas.py
storage/webapp/api/stock_exp_date/: __init__.py  mappers.py  routes.py  schemas.py
storage/webapp/api/stock_summary/: __init__.py  mappers.py  routers.py  schemas.py
storage/webapp/core/: error_handlers.py
storage/webapp/database/factories/: factories.py
storage/webapp/database/models/: __init__.py  inbound_orders.py  products.py  products_suppliers_info.py  stocks_summary.py  stocks_summary_arch.py  stocks_with_exp_dates.py  stocks_with_exp_dates_arch.py  suppliers.py  warehouses.py
storage/webapp/frontend/: 1stock_exp_date.html  index.html
storage/webapp/frontend/css/: style.css
storage/webapp/services/: extension.py  settings.py
storage/webapp/static/: index.html  index_v2.html
(+27 files in other folders)
