[tool.poetry]
name = "storage"
version = "0.1.0"
description = ""
authors =  ["Szymon Turek email = szymonturek.codes@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.1"
gunicorn = "^23.0.0"
python-dotenv = "^1.1.1"
pydantic = "^2.11.7"
email-validator = "^2.2.0"
flask-pydantic = "^0.13.1"
flasgger = "^0.9.7.1"
pyyaml = "^6.0.2"
flask-pydantic-spec = "^0.8.6"
mysqlclient = "^2.2.4"
SQLAlchemy = "^2.0"
Flask-SQLAlchemy = "^3.1"
Flask-Migrate = "^4.0"
dependency-injector = "^4.48.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^7.0.0"
pytest-flask = "^1.3.0"
mypy = "^1.18.2"
types-flask-migrate = "^4.1.0.20250809"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"




# poetry add --group dev <to co chce dodac>
# poetry add <to co chce dodac>
# poetry add flask@^2.3 <-- w konkretnej wersji a z gwiazdka najnowsza wersja poetry add flask*


